Fixed metro center-align error on phone & tablet.

--- a/client/stylesheets/sky-icons/css/sky-codes.css
+++ b/client/stylesheets/sky-icons/css/sky-codes.css
@@ -59,6 +59,7 @@
 .icon-skype:before { content: '\e839'; } /* '' */
 .icon-phone-circled:before { content: '\e83a'; } /* '' */
 .icon-mail-circled:before { content: '\e83b'; } /* '' */
+.icon-flag-circled:before { content: '\e83c'; } /* '' */
 .icon-emo-happy:before { content: '\f027'; } /* '' */
 .icon-emo-wink:before { content: '\f028'; } /* '' */
 .icon-emo-wink2:before { content: '\f029'; } /* '' */
